{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "c82c9483-3efe-4648-ba04-bf3cd8673e52",
            "actions": [
                {
                    "name": "Scroll",
                    "type": "PassThrough",
                    "id": "4fea1266-11b9-4298-addb-8b2d1fa2ac25",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickOnOne",
                    "type": "Button",
                    "id": "f3117b7d-24e4-4214-86df-e014ce4dfa8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickOnTwo",
                    "type": "Button",
                    "id": "ae23ba57-df08-42e7-9cfa-1489061d802e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickOnThree",
                    "type": "Button",
                    "id": "5f5357ce-fe61-443b-ad93-49d87a5847b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickOnFour",
                    "type": "Button",
                    "id": "a38847ce-b733-4872-a2c5-960506714e81",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickOnFive",
                    "type": "Button",
                    "id": "698696a5-b046-4765-b22d-e3bc20439667",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickOnSix",
                    "type": "Button",
                    "id": "83ac2e61-8e2c-40ea-a75c-6711f8643dec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickOnSeven",
                    "type": "Button",
                    "id": "73487f39-7eb1-4668-8a1b-b6ab8af44e5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2b221b47-f5bb-4d7d-a81c-d966f259d4fd",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickOnOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc56d7e8-c80a-4171-93e6-ce9217f6a7fe",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickOnTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01b5878b-ffad-4a37-9af2-55f136892907",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickOnThree",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a6bc08b-a2c0-4e8a-a94f-1f81824a46b6",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e420d99a-b98d-41ec-ba70-169d04e0c078",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickOnFour",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f523ac7-95b7-4fe7-b28e-ba0bb7be46de",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickOnFive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cea97b4a-6f0a-4159-b4bb-e6d03570fd65",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickOnSix",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d70655cb-58df-4b89-b220-62c28a9e8610",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickOnSeven",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}